--- a/Mix.html
+++ b/Mix.html
@@ -147,7 +147,7 @@ h1 { text-align: center; margin-top: 20px; color: #0056b3; }
 
 <!-- Plátno s obrázky -->
 <div class="image-container">
-    <img id="Ram" src="Ram-bez.PNG" alt="Zzzzzzakladni ram">
+  <!--   <img id="Ram" src="Ram-Z.PNG" alt="Zakladni ram">-->
     <img id="skluzavka" src="skluzavka.png" alt="Obrázek 1">
     <img id="KonicitaH1" src="KonicitaH1.PNG" alt="Obrázek 2">
     <img id="KonicitaH2" src="KonicitaH2.PNG" alt="Obrázek 5">
@@ -750,5 +750,6 @@ document.getElementById("printPdf").addEventListener("click", () => {
 
 </body>
 </html>
+
 
 
