--- a/Mix.html
+++ b/Mix.html
@@ -147,60 +147,60 @@ h1 { text-align: center; margin-top: 20px; color: #0056b3; }
 
 <!-- Plátno s obrázky -->
 <div class="image-container">
-    <img id="Ram" src="Ram-Z.PNG" alt="Zakladni ram">
+    <img id="Ram" src="Ram-Z.png" alt="Zakladni ram">
     <img id="skluzavka" src="skluzavka.png" alt="Obrázek 1">
-    <img id="KonicitaH1" src="KonicitaH1.PNG" alt="Obrázek 2">
-    <img id="KonicitaH2" src="KonicitaH2.PNG" alt="Obrázek 5">
-    <img id="KonicitaH3" src="KonicitaH3.PNG" alt="Obrázek 2">
-    <img id="KonicitaH4" src="KonicitaH4.PNG" alt="Obrázek 5">
-    <img id="KonicitaH5" src="KonicitaH5.PNG" alt="Obrázek 2">
-    <img id="Upínač1" src="Upínač1.PNG" alt="Obrázek 3">
-    <img id="Upínač2" src="Upínač2.PNG" alt="Obrázek 3">
-    <img id="Upínač3" src="Upínač3.PNG" alt="Obrázek 3">
-    <img id="Upínač4" src="Upínač4.PNG" alt="Obrázek 3">
-    <img id="Upínač5" src="Upínač5.PNG" alt="Obrázek 3">
-    <img id="Upínač6" src="Upínač6.PNG" alt="Obrázek 3">
-    <img id="Upínač7" src="Upínač7.PNG" alt="Obrázek 3">
-    <img id="Ruka1" src="Ruka1.PNG" alt="Obrázek 4">
-    <img id="Ruka2" src="Ruka2.PNG" alt="Obrázek 5">
-    <img id="Ruka3" src="Ruka3.PNG" alt="Obrázek 5">
-    <img id="Ruka4" src="Ruka4.PNG" alt="Obrázek 4">
-    <img id="Ruka5" src="Ruka5.PNG" alt="Obrázek 5">
-    <img id="Ruka6" src="Ruka6.PNG" alt="Obrázek 5">
-    <img id="Řetezak1" src="Řetezak1.PNG" alt="Obrázek 5">
-    <img id="Řetezak2" src="Řetezak2.PNG" alt="Obrázek 5">
-    <img id="Řetezak3" src="Řetezak3.PNG" alt="Obrázek 5">
-    <img id="Řetezak4" src="Řetezak4.PNG" alt="Obrázek 5">
-    <img id="Řetezak5" src="Řetezak5.PNG" alt="Obrázek 5">
-    <img id="Řetezak6" src="Řetezak6.PNG" alt="Obrázek 5">
-    <img id="Řetezak7" src="Řetezak7.PNG" alt="Obrázek 5">
-    <img id="Řetezak8" src="Řetezak8.PNG" alt="Obrázek 5">
-    <img id="Řetezak9" src="Řetezak9.PNG" alt="Obrázek 5">
-    <img id="Řetezak10" src="Řetezak10.PNG" alt="Obrázek 5">
-    <img id="Řetezak11" src="Řetezak11.PNG" alt="Obrázek 5">
-    <img id="Řetezak12" src="Řetezak12.PNG" alt="Obrázek 5">
-    <img id="Řetezak13" src="Řetezak13.PNG" alt="Obrázek 5">
-    <img id="Konicita1" src="Konicita1.PNG" alt="Obrázek 5">
-    <img id="Konicita2" src="Konicita2.PNG" alt="Obrázek 5">
-    <img id="Konicita3" src="Konicita3.PNG" alt="Obrázek 5">
-    <img id="Konicita4" src="Konicita4.PNG" alt="Obrázek 5">
-    <img id="Konicita5" src="Konicita5.PNG" alt="Obrázek 5">
-    <img id="Úhelník1" src="Úhelník1.PNG" alt="Obrázek 5">
-    <img id="Úhelník2" src="Úhelník2.PNG" alt="Obrázek 5">
-    <img id="Úhelník3" src="Úhelník3.PNG" alt="Obrázek 5">
-    <img id="Úhelník4" src="Úhelník4.PNG" alt="Obrázek 5">
-    <img id="Úhelník5" src="Úhelník5.PNG" alt="Obrázek 5">
-    <img id="Úhelník6" src="Úhelník6.PNG" alt="Obrázek 5">
-    <img id="Úhelník7" src="Úhelník7.PNG" alt="Obrázek 5">
-    <img id="Nakladac1" src="Nakladac1.PNG" alt="Obrázek 5">
-    <img id="Nakladac2" src="Nakladac2.PNG" alt="Obrázek 5">
-    <img id="Nakladac3" src="Nakladac3.PNG" alt="Obrázek 5">
-    <img id="Nakladac4" src="Nakladac4.PNG" alt="Obrázek 5">
-    <img id="Nakladac5" src="Nakladac5.PNG" alt="Obrázek 5">
-    <img id="Nakladac6" src="Nakladac6.PNG" alt="Obrázek 5">
-    <img id="Nakladac7" src="Nakladac7.PNG" alt="Obrázek 5">
-    <img id="Nakladac8" src="Nakladac8.PNG" alt="Obrázek 5">
-    <img id="Nakladac9" src="Nakladac9.PNG" alt="Obrázek 5">
+    <img id="KonicitaH1" src="KonicitaH1.png" alt="Obrázek 2">
+    <img id="KonicitaH2" src="KonicitaH2.png" alt="Obrázek 5">
+    <img id="KonicitaH3" src="KonicitaH3.png" alt="Obrázek 2">
+    <img id="KonicitaH4" src="KonicitaH4.png" alt="Obrázek 5">
+    <img id="KonicitaH5" src="KonicitaH5.png" alt="Obrázek 2">
+    <img id="Upínač1" src="Upínač1.png" alt="Obrázek 3">
+    <img id="Upínač2" src="Upínač2.png" alt="Obrázek 3">
+    <img id="Upínač3" src="Upínač3.png" alt="Obrázek 3">
+    <img id="Upínač4" src="Upínač4.png" alt="Obrázek 3">
+    <img id="Upínač5" src="Upínač5.png" alt="Obrázek 3">
+    <img id="Upínač6" src="Upínač6.png" alt="Obrázek 3">
+    <img id="Upínač7" src="Upínač7.png" alt="Obrázek 3">
+    <img id="Ruka1" src="Ruka1.png" alt="Obrázek 4">
+    <img id="Ruka2" src="Ruka2.png" alt="Obrázek 5">
+    <img id="Ruka3" src="Ruka3.png" alt="Obrázek 5">
+    <img id="Ruka4" src="Ruka4.png" alt="Obrázek 4">
+    <img id="Ruka5" src="Ruka5.png" alt="Obrázek 5">
+    <img id="Ruka6" src="Ruka6.png" alt="Obrázek 5">
+    <img id="Řetezak1" src="Řetezak1.png" alt="Obrázek 5">
+    <img id="Řetezak2" src="Řetezak2.png" alt="Obrázek 5">
+    <img id="Řetezak3" src="Řetezak3.png" alt="Obrázek 5">
+    <img id="Řetezak4" src="Řetezak4.png" alt="Obrázek 5">
+    <img id="Řetezak5" src="Řetezak5.png" alt="Obrázek 5">
+    <img id="Řetezak6" src="Řetezak6.png" alt="Obrázek 5">
+    <img id="Řetezak7" src="Řetezak7.png" alt="Obrázek 5">
+    <img id="Řetezak8" src="Řetezak8.png" alt="Obrázek 5">
+    <img id="Řetezak9" src="Řetezak9.png" alt="Obrázek 5">
+    <img id="Řetezak10" src="Řetezak10.png" alt="Obrázek 5">
+    <img id="Řetezak11" src="Řetezak11.png" alt="Obrázek 5">
+    <img id="Řetezak12" src="Řetezak12.png" alt="Obrázek 5">
+    <img id="Řetezak13" src="Řetezak13.png" alt="Obrázek 5">
+    <img id="Konicita1" src="Konicita1.png" alt="Obrázek 5">
+    <img id="Konicita2" src="Konicita2.png" alt="Obrázek 5">
+    <img id="Konicita3" src="Konicita3.png" alt="Obrázek 5">
+    <img id="Konicita4" src="Konicita4.png" alt="Obrázek 5">
+    <img id="Konicita5" src="Konicita5.png" alt="Obrázek 5">
+    <img id="Úhelník1" src="Úhelník1.png" alt="Obrázek 5">
+    <img id="Úhelník2" src="Úhelník2.png" alt="Obrázek 5">
+    <img id="Úhelník3" src="Úhelník3.png" alt="Obrázek 5">
+    <img id="Úhelník4" src="Úhelník4.png" alt="Obrázek 5">
+    <img id="Úhelník5" src="Úhelník5.png" alt="Obrázek 5">
+    <img id="Úhelník6" src="Úhelník6.png" alt="Obrázek 5">
+    <img id="Úhelník7" src="Úhelník7.png" alt="Obrázek 5">
+    <img id="Nakladac1" src="Nakladac1.png" alt="Obrázek 5">
+    <img id="Nakladac2" src="Nakladac2.png" alt="Obrázek 5">
+    <img id="Nakladac3" src="Nakladac3.png" alt="Obrázek 5">
+    <img id="Nakladac4" src="Nakladac4.png" alt="Obrázek 5">
+    <img id="Nakladac5" src="Nakladac5.png" alt="Obrázek 5">
+    <img id="Nakladac6" src="Nakladac6.png" alt="Obrázek 5">
+    <img id="Nakladac7" src="Nakladac7.png" alt="Obrázek 5">
+    <img id="Nakladac8" src="Nakladac8.png" alt="Obrázek 5">
+    <img id="Nakladac9" src="Nakladac9.png" alt="Obrázek 5">
 
     <img id="ctr" src="CTR800.png" alt="CTR800" style="opacity:0; position:absolute; top:0; left:0; width:100%; object-fit:cover;">
 </div>
@@ -750,6 +750,7 @@ document.getElementById("printPdf").addEventListener("click", () => {
 
 </body>
 </html>
+
 
 
 
