--- a/Mix.html
+++ b/Mix.html
@@ -161,12 +161,12 @@ h1 { text-align: center; margin-top: 20px; color: #0056b3; }
     <img id="Upínač5" src="Upínač5.png" alt="Obrázek 3">
     <img id="Upínač6" src="Upínač6.png" alt="Obrázek 3">
     <img id="Upínač7" src="Upínač7.png" alt="Obrázek 3">
-    <img id="Ruka1" src="Ruka1.png" alt="Obrázek 4">
-    <img id="Ruka2" src="Ruka2.png" alt="Obrázek 5">
-    <img id="Ruka3" src="Ruka3.png" alt="Obrázek 5">
-    <img id="Ruka4" src="Ruka4.png" alt="Obrázek 4">
-    <img id="Ruka5" src="Ruka5.png" alt="Obrázek 5">
-    <img id="Ruka6" src="Ruka6.png" alt="Obrázek 5">
+    <img id="ruka1" src="ruka1.png" alt="Obrázek 4">
+    <img id="ruka2" src="ruka2.png" alt="Obrázek 5">
+    <img id="ruka3" src="ruka3.png" alt="Obrázek 5">
+    <img id="ruka4" src="ruka4.png" alt="Obrázek 4">
+    <img id="ruka5" src="ruka5.png" alt="Obrázek 5">
+    <img id="ruka6" src="ruka6.png" alt="Obrázek 5">
     <img id="Řetezak1" src="Řetezak1.png" alt="Obrázek 5">
     <img id="Řetezak2" src="Řetezak2.png" alt="Obrázek 5">
     <img id="Řetezak3" src="Řetezak3.png" alt="Obrázek 5">
@@ -262,14 +262,14 @@ h1 { text-align: center; margin-top: 20px; color: #0056b3; }
             <button data-target="skluzavka" style="width:135px;" data-group="col1" data-value="1">Skluzavka</button>
             <button data-target="KonicitaH1" style="width:135px;" data-group="col2" data-value="1">Konicita poháněná</button>
             <button data-target="Upínač1" style="width:135px;" data-group="col3" data-value="1">Upínač</button>
-            <button data-target="Ruka1" style="width:135px;" data-group="col4" data-value="1">Ruka</button>
+            <button data-target="ruka1" style="width:135px;" data-group="col4" data-value="1">ruka</button>
             <button data-target="KonicitaH2" style="width:135px;" data-group="col5" data-value="1">Konicita poháněná</button>
-            <button data-target="Ruka2" style="width:135px;" data-group="col6" data-value="1">Ruka</button>
+            <button data-target="ruka2" style="width:135px;" data-group="col6" data-value="1">ruka</button>
             <button data-target="Upínač2" style="width:135px;" data-group="col7" data-value="1">Upínač</button>
-            <button data-target="Ruka3" style="width:135px;" data-group="col8" data-value="1">Ruka</button>
+            <button data-target="ruka3" style="width:135px;" data-group="col8" data-value="1">ruka</button>
             <button data-target="KonicitaH3" style="width:135px;" data-group="col9" data-value="1">Konicita poháněná</button>
             <button data-target="Upínač3" style="width:135px;" data-group="col10" data-value="1">Upínač</button>
-            <button data-target="Ruka4" style="width:135px;" data-group="col11" data-value="1">Ruka</button>
+            <button data-target="ruka4" style="width:135px;" data-group="col11" data-value="1">ruka</button>
         </div>
         <div class="image-buttons-row">
             <div style="width:135px;"></div>
@@ -307,14 +307,14 @@ h1 { text-align: center; margin-top: 20px; color: #0056b3; }
 <div class="image-buttons-row independent-row">
     <button data-target="KonicitaH2">Doplňková volba A</button>
     <button data-target="Upínač1">Doplňková volba B</button>
-    <button data-target="Ruka3">Doplňková volba C</button>
+    <button data-target="ruka3">Doplňková volba C</button>
 </div>
 
 NEZÁVISLÝ 5. ŘÁDEK -->
 <!-- <div class="image-buttons-row independent-row2">
     <button data-target="KonicitaH2">Doplňková volba A</button>
     <button data-target="Upínač1">Doplňková volba B</button>
-    <button data-target="Ruka3">Doplňková volba C</button>
+    <button data-target="ruka3">Doplňková volba C</button>
 </div> -->
 
 <!-- Nezávislý 4. řádek  FUNKČNÍ-->
@@ -383,7 +383,7 @@ NEZÁVISLÝ 5. ŘÁDEK -->
 <!-- <div class="image-buttons-row independent-row" data-sloupce="sloupce-tab1-row5">
     <button data-target="KonicitaH2" style="width:135px;" data-group="row5">Doplňková volba A</button>
     <button data-target="Upínač1" style="width:135px;" data-group="row5">Doplňková volba B</button>
-    <button data-target="Ruka3" style="width:135px;" data-group="row5">Doplňková volba C</button>
+    <button data-target="ruka3" style="width:135px;" data-group="row5">Doplňková volba C</button>
 </div> -->
 
 
@@ -391,7 +391,7 @@ NEZÁVISLÝ 5. ŘÁDEK -->
 <!-- <div class="image-buttons-row independent-row" data-sloupce="sloupce-tab1-row5">
     <button data-target="KonicitaH2">Doplňková volba A</button>
     <button data-target="Upínač1">Doplňková volba B</button>
-    <button data-target="Ruka3">Doplňková volba C</button>
+    <button data-target="ruka3">Doplňková volba C</button>
 </div> -->
 
 
@@ -433,13 +433,13 @@ NEZÁVISLÝ 5. ŘÁDEK -->
             <button data-target="Upínač4" style="width:135px;" data-group="col12" data-value="1">Upínač</button>
             <button data-target="Řetezak5" style="width:135px;" data-group="col13" data-value="1">Řetězák</button>
             <button data-target="Upínač5" style="width:135px;" data-group="col14" data-value="1">Upínač</button>
-            <button data-target="Ruka5" style="width:135px;" data-group="col15" data-value="1">Ruka</button>
+            <button data-target="ruka5" style="width:135px;" data-group="col15" data-value="1">ruka</button>
             <button data-target="Konicita4" style="width:135px;" data-group="col16" data-value="1">Konicita</button>
             <button data-target="Řetezak8" style="width:135px;" data-group="col17" data-value="1">Řetězák</button>
             <button data-target="Upínač6" style="width:135px;" data-group="col18" data-value="1">Upínač</button>
             <button data-target="Řetezak9" style="width:135px;" data-group="col19" data-value="1">Řetězák</button>
             <button data-target="Upínač7" style="width:135px;" data-group="col20" data-value="1">Upínač</button>
-            <button data-target="Ruka6" style="width:135px;" data-group="col21" data-value="1">Ruka</button>
+            <button data-target="ruka6" style="width:135px;" data-group="col21" data-value="1">ruka</button>
             <button data-target="KonicitaH5" style="width:135px;" data-group="col22" data-value="1">Konicita poháněná</button>
                <button data-target="Řetezak13" style="width:135px;" data-group="col23" data-value="1">Řetězák</button>
         </div>
@@ -750,6 +750,7 @@ document.getElementById("printPdf").addEventListener("click", () => {
 
 </body>
 </html>
+
 
 
 
