--- a/Mix.html
+++ b/Mix.html
@@ -215,14 +215,14 @@ h1 { text-align: center; margin-top: 20px; color: #0056b3; }
 <!-- Tab 1 -->
 <div id="tab1-content" class="tab-content active">
     <div class="sloupce-container">
-        <div id="sloupce-tab1" class="sloupce">0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0</div>
+        <div id="sloupce-tab1" class="sloupce">0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0</div>
     </div>
     <!-- Čtvrtý samostatný řádek označení -->
 <div class="sloupce-container">
     <div id="sloupce-tab1-row4" class="sloupce">0 0 0 0 0 0 0 0 </div>
 </div>
 <div class="sloupce-container">
-    <div id="sloupce-tab1-row5" class="sloupce">0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0</div>
+    <div id="sloupce-tab1-row5" class="sloupce">0 0 0 0 0 0 0 0</div>
 </div>
     <div class="sub-tabs">
         <button class="sub-tab-button active" data-target="subtab1-content">Pozice 1-11</button>
