--- a/Mix.html
+++ b/Mix.html
@@ -214,7 +214,11 @@ h1 { text-align: center; margin-top: 20px; color: #0056b3; }
 </div>
 
 <!-- Tab 1 -->
+
 <div id="tab1-content" class="tab-content active">
+    <div class="sloupce-container">
+    <div id="sloupce-tab1-row5" class="sloupce">0 0 0 0 0 0 0 0</div>
+</div>
     <div class="sloupce-container">
         <div id="sloupce-tab1" class="sloupce">0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0</div>
     </div>
@@ -222,16 +226,15 @@ h1 { text-align: center; margin-top: 20px; color: #0056b3; }
 <div class="sloupce-container">
     <div id="sloupce-tab1-row4" class="sloupce">0 0 0 0 0 0 0 0 </div>
 </div>
-<div class="sloupce-container">
-    <div id="sloupce-tab1-row5" class="sloupce">0 0 0 0 0 0 0 0</div>
-</div>
+
     <div class="sub-tabs">
-        <button class="sub-tab-button active" data-target="subtab1-content">Pozice 1-11</button>
+         <button class="sub-tab-button active" data-target="subtab3-content">Nakladače a úhelníky</button>
+        <button class="sub-tab-button " data-target="subtab1-content">Pozice 1-11</button>
         <button class="sub-tab-button" data-target="subtab2-content">Pozice 12-23</button>
-        <button class="sub-tab-button" data-target="subtab3-content">Nakladače a úhelníky</button>
+       
     </div>
 
-    <div id="subtab1-content" class="sub-tab-content active">
+    <div id="subtab1-content" class="sub-tab-content ">
         <div class="positions-header">
             <div> 1. pozice </div>
             <div>2. pozice</div>
@@ -490,7 +493,7 @@ NEZÁVISLÝ 5. ŘÁDEK -->
     </div>
 
 
-<div id="subtab3-content" class="sub-tab-content">
+<div id="subtab3-content" class="sub-tab-content active">
         <div class="positions-header">
             <div>3. pozice </div>
             <div>5. pozice</div>
