--- a/Mix.html
+++ b/Mix.html
@@ -14,7 +14,7 @@ body {
     color: #333;
 }
 h1 { text-align: center; margin-top: 20px; color: #0056b3; }
-
+h3 { text-align: center; margin-top: 20px; color: #0056b3; }
 /* Hlavní taby */
 .tabs { text-align: center; margin: 20px 0; }
 .tabs button {
@@ -143,7 +143,7 @@ h1 { text-align: center; margin-top: 20px; color: #0056b3; }
 
 <button id="printPdf">Uložit jako PDF</button>
 
-<h1>Konfigurátor - 1000 H60/80 </h1>
+<!-- <h1>Konfigurátor - 1000 H60/80 </h1> -->
 
 <!-- Plátno s obrázky -->
 <div class="image-container">
@@ -213,11 +213,14 @@ h1 { text-align: center; margin-top: 20px; color: #0056b3; }
     <button class="tab-button" data-target="tab3-content">Další pila</button>
 </div>
 
+
+
 <!-- Tab 1 -->
 
 <div id="tab1-content" class="tab-content active">
+    <h3>Konfigurátor - 1000 H60/80 </h3>
     <div class="sloupce-container">
-    <div id="sloupce-tab1-row5" class="sloupce">0 0 0 0 0 0 0 0</div>
+    <div id="sloupce-tab1-row5" class="sloupce">0 0 0 0 0 0 0 0 </div>
 </div>
     <!-- Čtvrtý samostatný řádek označení -->
 <div class="sloupce-container">
@@ -306,7 +309,7 @@ h1 { text-align: center; margin-top: 20px; color: #0056b3; }
 
 
 <!-- MEZERA POD STANDARDNÍMI ŘÁDKY -->
-<div style="height:50px;"></div>
+<div style="height:30px;"></div>
 
 <!-- NEZÁVISLÝ 4. ŘÁDEK
 <div class="image-buttons-row independent-row">
@@ -488,7 +491,7 @@ NEZÁVISLÝ 5. ŘÁDEK -->
 
 
         <!-- MEZERA POD STANDARDNÍMI ŘÁDKY -->
-<div style="height:50px;"></div>
+<div style="height:30px;"></div>
 
 
     </div>
@@ -562,7 +565,7 @@ NEZÁVISLÝ 5. ŘÁDEK -->
 
 
         <!-- MEZERA POD STANDARDNÍMI ŘÁDKY -->
-<div style="height:20px;"></div>
+<!-- <div style="height:20px;"></div> -->
 
 
     </div>
