--- a/Mix.html
+++ b/Mix.html
@@ -149,28 +149,50 @@ h3 { text-align: left; margin-top: -70px; color: #0056b3; }
 
 
 @media (max-width: 768px) {
-
-    /* 1️⃣ Nadpis */
-    .tab-title {
-        text-align: center;
+ body {
+        overflow-x: hidden;
+    }
+    /* === OBRÁZEK === */
+    .image-container {
+        position: relative;
+        width: 100%;
+        max-width: 100%;
+        top: 0;
+        left: 0;
         transform: none;
-        margin: 12px auto;
-        font-size: 18px;
+        margin: 0 auto 20px;
+        z-index: 0;
     }
 
-    /* 2️⃣ Kontejner sloupců */
-    .sloupce-container {
-        overflow-x: auto;
-        padding-bottom: 6px;
+    .image-container img {
+        position: relative;
+        width: 100%;
+        height: auto;
+        object-fit: contain;
     }
 
-    /* 3️⃣ Řádky s nulami */
-    .sloupce {
-        min-width: 520px;   /* aby se vešly všechny pozice */
+    /* === TABY A OBSAH === */
+    .tab-content {
+        padding-top: 10px;
+    }
+
+    /* === TLAČÍTKA === */
+    .image-buttons-row {
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    .image-buttons-row button {
+        width: calc(50% - 10px) !important;
         font-size: 14px;
     }
 
+    /* === SKRYJ PRÁZDNÉ BLOKY === */
+    .image-buttons-row > div {
+        display: none;
+    }
 }
+
 
 
 
