--- a/Mix.html
+++ b/Mix.html
@@ -178,14 +178,14 @@ h3 { text-align: left; margin-top: -70px; color: #0056b3; }
         width: 100%;
         max-width: 100%;
         top: 0;
-        left: 50%;
+        left: 350px;
         transform: none;
         margin: 0 auto 20px;
         z-index: 0;
     }
 
     .image-container img {
-        position: relative;
+        position: absolute;
         width: 100%;
         height: auto;
         object-fit: contain;
@@ -872,6 +872,7 @@ document.getElementById("printPdf").addEventListener("click", () => {
 
 </body>
 </html>
+
 
 
 
