--- a/Mix.html
+++ b/Mix.html
@@ -173,19 +173,23 @@ h3 { text-align: left; margin-top: -70px; color: #0056b3; }
         overflow-x: hidden;
     }
     /* === OBRÁZEK === */
-    .image-container {
-        position: relative;
-        width: 100%;
-        max-width: 100%;
-        top: 0;
-        left: 350px;
-        transform: none;
-        margin: 0 auto 20px;
-        z-index: 0;
-    }
+  .image-container {
+    position: relative;
+    width: 100%;
+    max-width: 100%;
+
+    top: 0;
+    left: 0;
+
+    transform: translateX(-40px); /* ← TADY POSOUVÁŠ */
+
+    margin: 0 auto 20px;
+    z-index: 0;
+}
+
 
     .image-container img {
-        position: absolute;
+        position: relative;
         width: 100%;
         height: auto;
         object-fit: contain;
@@ -872,9 +876,6 @@ document.getElementById("printPdf").addEventListener("click", () => {
 
 </body>
 </html>
-
-
-
 
 
 
