--- a/Mix.html
+++ b/Mix.html
@@ -106,7 +106,7 @@ h3 { text-align: left; margin-top: -70px; color: #0056b3; }
     position: absolute;
     width: 1400px;
     top: 690px;
-    left: 50%;
+    left: 58%;
     transform: translateX(-50%);
     height: auto;
     z-index: -1;
@@ -174,15 +174,17 @@ h3 { text-align: left; margin-top: -70px; color: #0056b3; }
     }
     /* === OBRÁZEK === */
   .image-container {
-    position: absolute;
-    width: 1000px;
-    top: 690px;
-    left: 50%;
-    transform: translateX(-50%);
-    height: auto;
+    position: relative;
+    width: 100%;
+    max-width: 100%;
+
+    top: 0;
+    left: 0;
+
+    transform: translateX(-40px); /* ← TADY POSOUVÁŠ */
+
+    margin: 0 auto 20px;
     z-index: 0;
-      
-   
 }
 
 
@@ -874,7 +876,6 @@ document.getElementById("printPdf").addEventListener("click", () => {
 
 </body>
 </html>
-
 
 
 
