--- a/Mix.html
+++ b/Mix.html
@@ -19,6 +19,7 @@ h3 {
     text-align: left;
     margin-left: 40px;   /* TADY se ovládá vzdálenost */
     margin-top: 0px;
+    font-size: 26px;
     margin-bottom: 0px;
     color: #0056b3;
 }
@@ -116,7 +117,7 @@ h3 {
 .image-container {
     position: absolute;
     width: 1400px;
-    top: 550px;
+    top: 590px;
     left: 58%;
     transform: translateX(-50%);
     height: auto;
